# BM4D-GPU

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  allreader.cpp  allreader.h  bm4d.cpp  bm4d.h  build.sh  docs.sh  kernels.cu  kernels.cuh  main.cpp  parameters.h  run_build.sh  stopwatch.hpp  tests_run.sh
.devcontainer/: Dockerfile  Dockerfile.template  build_image.sh  devcontainer.json  dockerfile_from_template.sh
data/: gstennisg15_0000.pgm  gstennisg15_0001.pgm  gstennisg15_0002.pgm  gstennisg15_0003.pgm  gstennisg15_0004.pgm  gstennisg15_0005.pgm  gstennisg15_0006.pgm  gstennisg15_0007.pgm  gstennisg15_0008.pgm  gstennisg15_0009.pgm  gstennisg15_0013.pgm  gstennisg15_0014.pgm  gstennisg15_0016.pgm  gstennisg15_0018.pgm  gstennisg15_0020.pgm  gstennisg15_0021.pgm  gstennisg15_0022.pgm  gstennisg15_0025.pgm  gstennisg15_0026.pgm  gstennisg15_0030.pgm  gstennisg15_0032.pgm  gstennisg15_0033.pgm  gstennisg15_0034.pgm  gstennisg15_0035.pgm  gstennisg15_0036.pgm  gstennisg15_0040.pgm  gstennisg15_0041.pgm  gstennisg15_0042.pgm  gstennisg15_0046.pgm  gstennisg15_0048.pgm  gstennisg15_0049.pgm  gstennisg15_0050.pgm  gstennisg15_0051.pgm  gstennisg15_0054.pgm  gstennisg15_0059.pgm  gstennisg15_0061.pgm  gstennisg15_0064.pgm  gstennisg15_0065.pgm  gstennisg15_0069.pgm  gstennisg15_0071.pgm  (+48 more)
data2/: gstennisg15_0000.pgm  gstennisg15_0001.pgm  gstennisg15_0003.pgm  gstennisg15_0008.pgm  gstennisg15_0009.pgm  gstennisg15_0010.pgm  gstennisg15_0011.pgm  gstennisg15_0012.pgm  gstennisg15_0015.pgm  gstennisg15_0017.pgm  gstennisg15_0019.pgm  gstennisg15_0023.pgm  gstennisg15_0024.pgm  gstennisg15_0027.pgm  gstennisg15_0028.pgm  gstennisg15_0029.pgm  gstennisg15_0031.pgm  gstennisg15_0037.pgm  gstennisg15_0038.pgm  gstennisg15_0039.pgm  gstennisg15_0043.pgm  gstennisg15_0044.pgm  gstennisg15_0045.pgm  gstennisg15_0047.pgm  gstennisg15_0052.pgm  gstennisg15_0053.pgm  gstennisg15_0055.pgm  gstennisg15_0056.pgm  gstennisg15_0057.pgm  gstennisg15_0058.pgm  gstennisg15_0060.pgm  gstennisg15_0062.pgm  gstennisg15_0063.pgm  gstennisg15_0066.pgm  gstennisg15_0067.pgm  gstennisg15_0068.pgm  gstennisg15_0070.pgm  gstennisg15_0072.pgm  gstennisg15_0073.pgm  gstennisg15_0076.pgm  (+29 more)
gt/: gstennis_0000.pgm  gstennis_0001.pgm  gstennis_0002.pgm  gstennis_0003.pgm  gstennis_0004.pgm  gstennis_0005.pgm  gstennis_0006.pgm  gstennis_0007.pgm  gstennis_0008.pgm  gstennis_0009.pgm  gstennis_0010.pgm  gstennis_0011.pgm  gstennis_0012.pgm  gstennis_0013.pgm  gstennis_0014.pgm  gstennis_0015.pgm  gstennis_0016.pgm  gstennis_0017.pgm  gstennis_0018.pgm  gstennis_0019.pgm  gstennis_0020.pgm  gstennis_0021.pgm  gstennis_0022.pgm  gstennis_0023.pgm  gstennis_0024.pgm  gstennis_0025.pgm  gstennis_0026.pgm  gstennis_0027.pgm  gstennis_0028.pgm  gstennis_0029.pgm  gstennis_0030.pgm  gstennis_0031.pgm  gstennis_0032.pgm  gstennis_0033.pgm  gstennis_0034.pgm  gstennis_0035.pgm  gstennis_0036.pgm  gstennis_0037.pgm  gstennis_0038.pgm  gstennis_0039.pgm  (+110 more)
include/bm4d-gpu/: CImg.h  allreader.h  bm4d.h  helper_cuda.h  helper_string.h  kernels.cuh  parameters.h  stopwatch.hpp  utils.h
src/: allreader.cpp  bm4d.cpp  kernels.cu  main.cpp
tests/: CMakeLists.txt  test_bm4d.cpp
